[gd_scene load_steps=4 format=3 uid="uid://dafp780t0eq02"]

[ext_resource type="Script" path="res://UI/board.gd" id="1_egih8"]
[ext_resource type="PackedScene" uid="uid://o5am70o2ihbm" path="res://UI/resource_counter.tscn" id="1_fr3ir"]
[ext_resource type="PackedScene" uid="uid://cco8iuufaoxxu" path="res://Objects/card.tscn" id="3_62dky"]

[node name="Board" type="Node"]
script = ExtResource("1_egih8")

[node name="WaterCounter" parent="." instance=ExtResource("1_fr3ir")]

[node name="FertilizerCounter" parent="." instance=ExtResource("1_fr3ir")]
offset_left = 150.0
offset_right = 150.0

[node name="GoldCounter" parent="." instance=ExtResource("1_fr3ir")]
offset_left = 300.0
offset_right = 300.0

[node name="Card" parent="." instance=ExtResource("3_62dky")]
offset_left = -518.0
offset_top = -408.0
offset_right = -518.0
offset_bottom = -408.0
